add some new things

--- a/135678942570.tex
+++ b/135678942570.tex
@@ -46,6 +46,8 @@
 \tableofcontents\clearpage
 \input geometry.tex
 \clearpage
+\input math.tex
+\clearpage
 \input graph.tex
 \clearpage
 \input string.tex
