--- a/mist.tex
+++ b/mist.tex
@@ -2,4 +2,9 @@
 
 \subsection{Dancing Links}
 \lstinputlisting{./mist/Dancing_Links.cpp}
-
+\subsection{曼哈顿距离最小生成树}
+\lstinputlisting{./mist/manhattan_MST.cpp}
+\subsection{栈外挂}
+\lstinputlisting{./mist/stack.cpp}
+\subsection{输入挂}
+\lstinputlisting{./mist/input.cpp}
