--- a/string.tex
+++ b/string.tex
@@ -9,3 +9,10 @@
 \subsection{后缀自动机}
 \lstinputlisting{"./string/sam.cpp"}
 
+\subsection{manacher}
+\lstinputlisting{"./string/manacher.cpp"}
+
+\subsection{最小表示法}
+\lstinputlisting{"./string/Minimum_Representation.cpp"}
+
+
