--- a/title.tex
+++ b/title.tex
@@ -6,8 +6,8 @@
 		~\\[80pt]
     \hrule\ \\[8pt]
     \fontsize{48pt}{\baselineskip}\selectfont  \textsc{ACM Template}\\[8pt]
-    \hrule\ \\[420pt]
-
+    \hrule\ \\[150pt]
+    \selectfont UESTC\_DarkSyndra \\[250pt]
     \huge 135\_Morisummer\\[8pt]
     \Large Last build at \today
   \end{center}
